--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Enroll.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Enroll.cshtml
@@ -4,20 +4,21 @@
 }
 
 <h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("Enroll", "Course", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.RegistrationCode, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.RegistrationCode, new { @class = "form-control" })
+<div class="form-horizontal">
+    @using (Html.BeginForm("Enroll", "Course", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.RegistrationCode, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.RegistrationCode, new { @class = "form-control" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Submit" />
+            </div>
         </div>
-    </div>
-}
+    }
+</div>
