--- a/SmartRoom/SmartRoom/Areas/Forms/Views/Syllabus/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Forms/Views/Syllabus/Create.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <li class="form-horizontal">
         <h4>Syllabus</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -54,13 +54,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <li class="ui-state-default class-container">
             @Html.LabelFor(model => model.EmergencyPhone, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmergencyPhone, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmergencyPhone, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </li>
 
         <div class="form-group">
             @Html.LabelFor(model => model.EmailAddress, htmlAttributes: new { @class = "control-label col-md-2" })
