--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_CourseMenu.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_CourseMenu.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<SmartRoom.Web.App_Start.UserRelationship>
 
 <div>
-    <table>
+    @Html.ActionLink("Back to Course List", "Index", null, new { @class = "btn btn-primary btn-sm" })
+    <br />
+    <table style="margin:10px;">
         <tr>
         @foreach(var item in Model)
         {
@@ -10,9 +12,7 @@
                 @Html.ActionLink(HttpUtility.HtmlDecode(Html.DisplayFor(modelItem => item.Course.Subject) +""+ Html.DisplayFor(modelItem => item.Course.CourseNumber) + " - " + Html.DisplayFor(modelItem => item.Course.Section)) , "Details", "Courses", new { Area = "Classroom", id = item.Course.Id}, new {Title = item.Course.Title })
             </td>
         }
-            <td>
-                @Html.ActionLink("Back to Course List", "Index", null, new { @class = "btn btn-primary btn-sm" })
-            </td>
+            
             </tr>
     </table>
 </div>
